--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>This is the header</h1>
+    <p>this is a paragraph</p>
+    <p>this is another paragraph</p>
+  </body>
 </html>
